# bigolchungus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  app_dispatcher.cpp  app_test.cpp  app_worker.cpp  bigolchungus.cpp  bigolchungus.sh  blah.sh  blake2s-impl_ref.h  blake2s_fast.c  blake2s_ref.c  blake2s_ref.h  common.cpp  common.h  fast_blake.c  main.cpp  opencl_backend.cpp  opencl_backend.hpp  setup-miner.sh  test_opencl.cpp  test_opencl.sh
cmake/: FindOpenCL.cmake
kernels/: alternative-nonce.cl  kernel.cl
resources/: kadena-miner@.service
test/: check-speed.py  test-speed.sh  test.sh
